Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.13.1
-
None
-
5cb74af1665fbb9a5c45dd907e824be6b8318f2d (qt-creator/qt-creator/4.13)
Description
When outputting lines to stdout or stderr, newlines after the first for any given line are ignored for the Application Output window.
For example, adding the line printf("test\n\n\nasdf\n"); gives the following output:
test
asdf
This can make application output difficult to go through when extra newlines are used as separators for sections.